Add shadows and field flipping

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,6 +2,7 @@
     font-family: 'Roboto', sans-serif;
 }
 
+
 #title {
     font-size: 28px;
     margin: 20px auto 20px auto;
@@ -42,21 +43,25 @@ td {
     font-size: 14px;
 }
 
-td>input,
-td>input:focus {
+td>input {
     font-size: 14px;
     padding: 2px;
     border: none;
     margin: 2px 0;
-    border-bottom: #AAA solid 1px;
+    border-bottom: #AAAAAA solid 1px;
     text-align: center;
     width: 50px;
     outline: none;
 }
 
+td>input:hover {
+    border-bottom: #000000 solid 1px;
+}
+
 .buttonContainer {
     width: 828px;
     margin: 10px auto;
+
 }
 
 button {
@@ -67,12 +72,14 @@ button {
     color: #FFFFFF;
     cursor: pointer;
     font-size: 14px;
-    transition: background-color 0.25s
+    transition: background-color 0.25s;
+    box-shadow: 0px 3px 5px rgba(128, 128, 128, 0.4);
 }
 
 button:hover {
     background-color: #0062EE;
     color: #FFFFFF;
+    box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.4);
 }
 
 button:focus {
@@ -81,7 +88,6 @@ button:focus {
 
 input[type=checkbox] {
     transform: scale(1.25);
-    background: rgb(153, 204, 102) !important;
     padding: 1px;
 }
 
@@ -96,8 +102,7 @@ input[type=checkbox] {
 }
 
 #field {
-    background-size: contain;
-    background-image: url('images/field.png');
+    background-size: auto 100%;
     background-repeat: no-repeat;
 }
 
@@ -113,7 +118,7 @@ body>footer>address {
 
 .robot>rect {
     stroke-width: 3;
-    stroke: #ff8c11;
+    stroke: #FF6200;
     fill: transparent;
 }
 
@@ -132,13 +137,13 @@ body>footer>address {
 }
 
 #path {
-    stroke: #2CFF2C;
+    stroke: #00FF66;
     stroke-width: 3;
     fill: transparent;
 }
 
 #odometry {
-    stroke: #2CFF2C;
+    stroke: #00FF66;
     stroke-width: 3;
     fill: transparent;
 }
